--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ charset=UTF-8" />
 <meta name="keywords" content="test, site, website" />
 <meta name="description" content="Ýòîò ñàéò ÿâëÿåòñÿ ñàéòîì" />
 <link href="css/style" rel="stylesheet" type="text/css" />
-<title>Âàø Steam Trade-Items Trading</title>
+<title>Steam Trade-Items Trading</title>
 </head>
 <body bgcolor="#000" background="fon.png">
 </body>
