--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" href="favicon.ico" type="image/icon">                               <meta http-equiv="Content-Type" content"text/html;
+<link rel="shortcut icon" href="favicon." type="image/icon">                               <meta http-equiv="Content-Type" content"text/html;
 charset=UTF-8"/>
 <meta name="keywords" content="test, site, website" />
 <meta name="description" content="Ýòîò ñàéò ÿâëÿåòñÿ ñàéòîì" />
