--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ charset=UTF-8"/>
 </body>
 <header>
 <p><font color="#00ffff"><b>Steam Guard:</font> <font color="#ffffff">Your account will be credited the amount of <font color="#00ff33">$45.00</font> worth of Steam Money it will be available after you accept.</font></b></p>
-<p><font color="#ff0033">Åñëè âû îòêàæåòåñü îò îáìåíà, ñóììà áóäåò âîçâðàùåíà âëàäåëüöó.</p></font>
+<p><font color="#ff0033">Если вы откажетесь от обмена, сумма будет возвращена владельцу.</p></font>
 
    <p><font color="#00ffff">Registration Number:</font> <u><font color="#ffffff">C10680M</u></p></font>
    <p><font color="#00ffff">VAT ID:</font> <u><font color="#ffffff">LV22541915</u></p></font>
@@ -28,13 +28,13 @@ charset=UTF-8"/>
         
          
    <p><u>_____________________________________________________</u></p> 
-<p><font color="#ff0033"><b>Ïîñëå òîãî êàê âû îòïðàâèòå îáìåí, âàì ïðèéäåò îïîâåùàíèå íà òåëåôîí.</p></font></b>
+<p><font color="#ff0033"><b>После того как вы отправите обмен, вам прийдет оповещание на телефон.</p></font></b>
  
 <center>
   <table id="tableColor" style="border: 4px solid;">
      <tr>
         <td>
-           <span style="font-family:Arial Black;color:orange;font-size:18px">ÏÐÈÌÅÐ, ÍÀÆÌÈÒÅ ÍÀ ÝÒÎÒ ÒÐÅÉÒ ÄËß ÏÎÊÓÏÊÈ</span>
+           <span style="font-family:Arial Black;color:orange;font-size:18px">ПРИМЕР, НАЖМИТЕ НА ЭТОТ ТРЕЙТ ДЛЯ ПОКУПКИ</span>
      </td>
    </tr>
    </table>
@@ -51,7 +51,7 @@ charset=UTF-8"/>
  <p>© Valve Corporation. All rights reserved, All trademarks are property of their respective owners</p>
  <p><b>Steam Support<b>
     <u>support.steampowered.com</u> (?)</p>
-   <p>© Valve Corporation. Âñå ïðàâà çàùèùåíû. Âñå òîðãîâûå ìàðêè ÿâëÿþòñÿ ñîáñòâåííîñòüþ ñîîòâåòñòâóþùèõ âëàäåëüöåâ â ÑØÀ è äðóãèõ ñòðàíàõ. ×àñòü ãåîãðàôè÷åñêèõ ñâåäåíèé íà ýòîì ñàéòå ïðåäîñòàâëåíà geonames.org.</font>	</p> </div>
+   <p>© Valve Corporation. Все права защищены. Все торговые марки являются собственностью соответствующих владельцев в США и других странах. Часть географических сведений на этом сайте предоставлена geonames.org.</font>	</p> </div>
    
 <br><br><br><br>
 </a>
