--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@ charset=UTF-8" />
 <body bgcolor="#000" background="fon.png">
 </body>
 <header>
-<p><font color="#00ffff"><b>Steam Guard:</font> <font color="#ffffff">Your account will be credited the amount of <font color="#00ff33">$45.00</font> worth of Steam Money it will be available after you accept.</font></b></p>
+<p><font color="#00ffff"><b>Steam Guard:</font> <font color="#ffffff">Your account will be credited the amount of <font color="#00ff33">00.00RUB</font> worth of Steam Money it will be available after you accept.</font></b></p>
 <p><font color="#ff0033">Если вы откажетесь от обмена, сумма будет возвращена владельцу.</p></font>
 
    <p><font color="#00ffff">Registration Number:</font> <u><font color="#ffffff">C10680M</u></p></font>
    <p><font color="#00ffff">VAT ID:</font> <u><font color="#ffffff">LV22541915</u></p></font>
    <p><i><font color="#00ffff">IDLT Number</i>:</font> <u><font color="#ffffff">37519715</u></p></font>
 <p><font color="#00ffff">Steam ID:</font> <u><font color="#ffffff">390867589</u></p></font>
-   <p><font color="#00ffff">Steam Trade:</font> <font color="#ffffff"><u>https://steamcommunity.com/tradeoffer/new/?partner=107340816&token=RPJBwntk</u></font>
-   <p><font color="#ff6600">You QIWI:</font>  <font color="#ffffff">+79600300654</font>
-   <p><i><font color="#ffcc33">Owner costs</font></i>: <u><font color="#00ff33">45.00$</font></u></p>
+   <p><font color="#00ffff">Steam Trade:</font> <font color="#ffffff"><u>-</u></font>
+   <p><font color="#ff6600">You QIWI:</font>  <font color="#ffffff">-</font>
+   <p><i><font color="#ffcc33">Owner costs</font></i>: <u><font color="#00ff33">00.00RUB</font></u></p>
 <p><u>_____________________________________________________</u></p> 
- <p><i><font color="#ff99cc">Dota 2:  </font></i><font color="#ff6600">Demon Eater ç êàðáóâàííÿì</font>, <font color="#ffffff">Totem of Deep Magma</font>, <font color="#ff6600">Basher of Mage Skulls ç êàðáóâàííÿì</font>, <font color="#ffffff">Basher of Mage Skulls</font>.
+ <p><i><font color="#ff99cc">Dota 2:  </font></i><font color="#ff6600">-</font>, <font color="#ffffff"></font>, <font color="#ff6600"></font>, <font color="#ffffff"></font>.
  <p><u>_____________________________________________________</u></p> 
          <p><i><font color="#ff99cc">CS:GO :</font></i>
         
